Stentbruk adjusted to staging

--- a/NORIC_local_monthly_procedures.tex
+++ b/NORIC_local_monthly_procedures.tex
@@ -14,743 +14,5 @@
 \usepackage{Sweave}
 
 
-<<<<<<< HEAD
-\title{NORIC Bergen \\Månedsrapport}\date{ Wed Feb  4 10:43:17 2015 }
-=======
-\title{NORIC Bergen \\Månedsrapport}\date{ Tue Oct 21 20:20:21 2014 }
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
+\title{NORIC Haukeland \\Månedsrapport}\date{ Thu Jun 11 14:24:55 2015 }
 
-
-
-
-
-
-
-
-
-\begin{document}
-
-\maketitle
-
-
-
-\section{Diagnostisk hjertekaterisering og PCI}
-
-\begin{frame}
-\begin{Huge}
-Diagnostisk hjertekaterisering og PCI
-\end{Huge}
-\end{frame}
-
-
-   %%% MCETYPE
-
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter hastegrad og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_mcetype_month.pdf}
-\end{figure}\end{frame}
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrr}
-  \toprule
- & \begin{sideways} Planlagt \end{sideways} & \begin{sideways} Akutt \end{sideways} & \begin{sideways} Subakutt \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 106 & 31 & 150 & 0 & 287 \\ 
-=======
-13-01 & 106 & 32 & 150 & 0 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 127 & 34 & 92 & 0 & 253 \\ 
-  13-03 & 119 & 41 & 122 & 0 & 282 \\ 
-  13-04 & 133 & 38 & 128 & 0 & 299 \\ 
-  13-05 & 108 & 41 & 124 & 0 & 273 \\ 
-  13-06 & 112 & 46 & 121 & 0 & 279 \\ 
-<<<<<<< HEAD
-  13-07 & 86 & 34 & 109 & 0 & 229 \\ 
-  13-08 & 112 & 41 & 115 & 0 & 268 \\ 
-  13-09 & 118 & 34 & 133 & 0 & 285 \\ 
-  13-10 & 80 & 49 & 143 & 0 & 272 \\ 
-  13-11 & 101 & 27 & 128 & 0 & 256 \\ 
-  13-12 & 78 & 27 & 130 & 0 & 235 \\ 
-  14-01 & 97 & 29 & 128 & 0 & 254 \\ 
-  14-02 & 105 & 38 & 118 & 0 & 261 \\ 
-  14-03 & 127 & 39 & 130 & 0 & 296 \\ 
-  14-04 & 104 & 36 & 140 & 0 & 280 \\ 
-  14-05 & 111 & 35 & 109 & 0 & 255 \\ 
-  14-06 & 117 & 44 & 101 & 0 & 262 \\ 
-  14-07 & 106 & 37 & 97 & 0 & 240 \\ 
-  14-08 & 26 & 8 & 25 & 0 & 59 \\ 
-  Sum & 2073 & 709 & 2343 & 0 & 5125 \\ 
-=======
-  13-07 & 90 & 34 & 105 & 0 & 229 \\ 
-  13-08 & 112 & 41 & 115 & 0 & 268 \\ 
-  13-09 & 118 & 34 & 132 & 0 & 284 \\ 
-  13-10 & 80 & 49 & 143 & 0 & 272 \\ 
-  13-11 & 102 & 27 & 127 & 0 & 256 \\ 
-  13-12 & 80 & 27 & 114 & 0 & 221 \\ 
-  14-01 & 102 & 40 & 110 & 0 & 252 \\ 
-  14-02 & 120 & 39 & 100 & 0 & 259 \\ 
-  14-03 & 107 & 38 & 80 & 0 & 225 \\ 
-  Sum & 1616 & 561 & 1763 & 0 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosdyrer etter hastegrad og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-   %%% REGTYP
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter type og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_regtyp_month.pdf}
-\end{figure}\end{frame}
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrr}
-  \toprule
- & \begin{sideways} Angio \end{sideways} & \begin{sideways} PCI \end{sideways} & \begin{sideways} Angio+PCI \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 161 & 17 & 109 & 0 & 287 \\ 
-=======
-13-01 & 161 & 17 & 110 & 0 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 158 & 13 & 82 & 0 & 253 \\ 
-  13-03 & 146 & 21 & 115 & 0 & 282 \\ 
-  13-04 & 181 & 23 & 95 & 0 & 299 \\ 
-  13-05 & 164 & 15 & 94 & 0 & 273 \\ 
-  13-06 & 168 & 16 & 95 & 0 & 279 \\ 
-  13-07 & 140 & 10 & 79 & 0 & 229 \\ 
-  13-08 & 161 & 5 & 102 & 0 & 268 \\ 
-<<<<<<< HEAD
-  13-09 & 164 & 18 & 103 & 0 & 285 \\ 
-  13-10 & 160 & 12 & 100 & 0 & 272 \\ 
-  13-11 & 165 & 7 & 84 & 0 & 256 \\ 
-  13-12 & 152 & 11 & 72 & 0 & 235 \\ 
-  14-01 & 154 & 16 & 84 & 0 & 254 \\ 
-  14-02 & 151 & 11 & 99 & 0 & 261 \\ 
-  14-03 & 165 & 22 & 109 & 0 & 296 \\ 
-  14-04 & 161 & 15 & 104 & 0 & 280 \\ 
-  14-05 & 155 & 9 & 91 & 0 & 255 \\ 
-  14-06 & 159 & 9 & 94 & 0 & 262 \\ 
-  14-07 & 142 & 7 & 91 & 0 & 240 \\ 
-  14-08 & 38 & 1 & 20 & 0 & 59 \\ 
-  Sum & 3045 & 258 & 1822 & 0 & 5125 \\ 
-=======
-  13-09 & 163 & 18 & 103 & 0 & 284 \\ 
-  13-10 & 160 & 12 & 100 & 0 & 272 \\ 
-  13-11 & 164 & 7 & 85 & 0 & 256 \\ 
-  13-12 & 148 & 12 & 61 & 0 & 221 \\ 
-  14-01 & 155 & 14 & 83 & 0 & 252 \\ 
-  14-02 & 150 & 11 & 98 & 0 & 259 \\ 
-  14-03 & 125 & 15 & 85 & 0 & 225 \\ 
-  Sum & 2344 & 209 & 1387 & 0 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosdyrer etter type og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-   %%% PRIMBES
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter primær beslutning og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_primbes_month.pdf}
-\end{figure}\end{frame}
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 14 & 88 & 53 & 5 & 108 & 0 & 19 & 287 \\ 
-=======
-13-01 & 14 & 88 & 53 & 5 & 109 & 0 & 19 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 21 & 70 & 61 & 3 & 81 & 0 & 17 & 253 \\ 
-  13-03 & 12 & 72 & 53 & 8 & 117 & 1 & 19 & 282 \\ 
-  13-04 & 6 & 106 & 61 & 8 & 95 & 0 & 23 & 299 \\ 
-  13-05 & 9 & 93 & 56 & 5 & 94 & 1 & 15 & 273 \\ 
-  13-06 & 6 & 96 & 56 & 7 & 95 & 0 & 19 & 279 \\ 
-  13-07 & 5 & 76 & 53 & 6 & 79 & 0 & 10 & 229 \\ 
-  13-08 & 11 & 75 & 68 & 7 & 102 & 0 & 5 & 268 \\ 
-<<<<<<< HEAD
-  13-09 & 14 & 73 & 70 & 7 & 103 & 0 & 18 & 285 \\ 
-  13-10 & 10 & 89 & 56 & 5 & 100 & 0 & 12 & 272 \\ 
-  13-11 & 16 & 95 & 51 & 2 & 84 & 0 & 8 & 256 \\ 
-  13-12 & 13 & 91 & 45 & 3 & 72 & 0 & 11 & 235 \\ 
-  14-01 & 13 & 82 & 54 & 4 & 84 & 1 & 16 & 254 \\ 
-  14-02 & 10 & 77 & 56 & 8 & 99 & 0 & 11 & 261 \\ 
-  14-03 & 17 & 90 & 54 & 4 & 109 & 0 & 22 & 296 \\ 
-  14-04 & 19 & 75 & 58 & 6 & 104 & 3 & 15 & 280 \\ 
-  14-05 & 12 & 80 & 61 & 2 & 91 & 0 & 9 & 255 \\ 
-  14-06 & 15 & 57 & 36 & 1 & 57 & 0 & 96 & 262 \\ 
-  14-07 & 21 & 66 & 36 & 3 & 81 & 2 & 31 & 240 \\ 
-  14-08 & 3 & 18 & 15 & 0 & 17 & 0 & 6 & 59 \\ 
-  Sum & 247 & 1569 & 1053 & 94 & 1772 & 8 & 382 & 5125 \\ 
-=======
-  13-09 & 13 & 73 & 70 & 7 & 103 & 0 & 18 & 284 \\ 
-  13-10 & 10 & 89 & 56 & 5 & 100 & 0 & 12 & 272 \\ 
-  13-11 & 16 & 94 & 51 & 2 & 85 & 0 & 8 & 256 \\ 
-  13-12 & 13 & 80 & 38 & 2 & 55 & 0 & 33 & 221 \\ 
-  14-01 & 15 & 71 & 44 & 3 & 70 & 1 & 48 & 252 \\ 
-  14-02 & 9 & 66 & 50 & 7 & 81 & 0 & 46 & 259 \\ 
-  14-03 & 12 & 61 & 36 & 3 & 81 & 0 & 32 & 225 \\ 
-  Sum & 172 & 1210 & 806 & 78 & 1347 & 3 & 324 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter primær beslutning og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-   %%% PRIMBES2
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter primær beslutning og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_primbes_detailed_month.pdf}
-\end{figure}\end{frame}
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Fortsatt utredning \end{sideways} & \begin{sideways} Klaffeoperasjon \end{sideways} & \begin{sideways} ACB-operasjon \end{sideways} & \begin{sideways} Klaffe- + ACB-operasjon \end{sideways} & \begin{sideways} PCI+ACB-operasjon \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Henvisning til annet sykehus \end{sideways} & \begin{sideways} Annet operativt inngrep \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 14 & 88 & 6 & 7 & 32 & 8 & 0 & 5 & 108 & 0 & 0 & 19 & 287 \\ 
-=======
-13-01 & 14 & 88 & 6 & 7 & 32 & 8 & 0 & 5 & 109 & 0 & 0 & 19 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 21 & 70 & 9 & 10 & 31 & 11 & 0 & 3 & 81 & 0 & 0 & 17 & 253 \\ 
-  13-03 & 12 & 72 & 14 & 10 & 22 & 7 & 0 & 8 & 117 & 0 & 1 & 19 & 282 \\ 
-  13-04 & 6 & 106 & 20 & 8 & 23 & 10 & 0 & 8 & 95 & 0 & 0 & 23 & 299 \\ 
-  13-05 & 9 & 93 & 12 & 13 & 26 & 5 & 0 & 5 & 94 & 0 & 1 & 15 & 273 \\ 
-  13-06 & 6 & 96 & 12 & 15 & 24 & 5 & 0 & 7 & 95 & 0 & 0 & 19 & 279 \\ 
-  13-07 & 5 & 76 & 12 & 13 & 25 & 3 & 0 & 6 & 79 & 0 & 0 & 10 & 229 \\ 
-  13-08 & 11 & 75 & 20 & 11 & 26 & 11 & 0 & 7 & 102 & 0 & 0 & 5 & 268 \\ 
-<<<<<<< HEAD
-  13-09 & 14 & 73 & 28 & 14 & 22 & 6 & 0 & 7 & 103 & 0 & 0 & 18 & 285 \\ 
-  13-10 & 10 & 89 & 34 & 3 & 18 & 1 & 0 & 5 & 100 & 0 & 0 & 12 & 272 \\ 
-  13-11 & 16 & 95 & 24 & 6 & 17 & 4 & 0 & 2 & 84 & 0 & 0 & 8 & 256 \\ 
-  13-12 & 13 & 91 & 23 & 4 & 16 & 2 & 0 & 3 & 72 & 0 & 0 & 11 & 235 \\ 
-  14-01 & 13 & 82 & 22 & 15 & 14 & 3 & 0 & 4 & 84 & 0 & 1 & 16 & 254 \\ 
-  14-02 & 10 & 77 & 34 & 6 & 12 & 4 & 0 & 8 & 99 & 0 & 0 & 11 & 261 \\ 
-  14-03 & 17 & 90 & 26 & 7 & 15 & 6 & 0 & 4 & 109 & 0 & 0 & 22 & 296 \\ 
-  14-04 & 19 & 75 & 27 & 9 & 20 & 2 & 0 & 6 & 104 & 0 & 3 & 15 & 280 \\ 
-  14-05 & 12 & 80 & 45 & 2 & 11 & 3 & 0 & 2 & 91 & 0 & 0 & 9 & 255 \\ 
-  14-06 & 15 & 57 & 19 & 3 & 14 & 0 & 0 & 1 & 57 & 0 & 0 & 96 & 262 \\ 
-  14-07 & 21 & 66 & 22 & 5 & 4 & 5 & 0 & 3 & 81 & 0 & 2 & 31 & 240 \\ 
-  14-08 & 3 & 18 & 10 & 3 & 1 & 1 & 0 & 0 & 17 & 0 & 0 & 6 & 59 \\ 
-  Sum & 247 & 1569 & 419 & 164 & 373 & 97 & 0 & 94 & 1772 & 0 & 8 & 382 & 5125 \\ 
-=======
-  13-09 & 13 & 73 & 28 & 14 & 22 & 6 & 0 & 7 & 103 & 0 & 0 & 18 & 284 \\ 
-  13-10 & 10 & 89 & 34 & 3 & 18 & 1 & 0 & 5 & 100 & 0 & 0 & 12 & 272 \\ 
-  13-11 & 16 & 94 & 24 & 6 & 17 & 4 & 0 & 2 & 85 & 0 & 0 & 8 & 256 \\ 
-  13-12 & 13 & 80 & 22 & 4 & 9 & 3 & 0 & 2 & 55 & 0 & 0 & 33 & 221 \\ 
-  14-01 & 15 & 71 & 23 & 12 & 7 & 2 & 0 & 3 & 70 & 0 & 1 & 48 & 252 \\ 
-  14-02 & 9 & 66 & 34 & 5 & 8 & 3 & 0 & 7 & 81 & 0 & 0 & 46 & 259 \\ 
-  14-03 & 12 & 61 & 19 & 6 & 9 & 2 & 0 & 3 & 81 & 0 & 0 & 32 & 225 \\ 
-  Sum & 172 & 1210 & 289 & 137 & 299 & 81 & 0 & 78 & 1347 & 0 & 3 & 324 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter primær beslutning og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-   %%% JOURTID
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosdyrer etter vakttid og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_jourtid_month.pdf}
-\end{figure}\end{frame}
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrr}
-  \toprule
- & \begin{sideways} Planlagt på dagtid \end{sideways} & \begin{sideways} Akuttilfelle på dagtid \end{sideways} & \begin{sideways} Akutfall på vakttid \end{sideways} & \begin{sideways} Subakuttilfelle på dagtid \end{sideways} & \begin{sideways} Subakuttilfelle på vakttid \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 106 & 19 & 12 & 139 & 5 & 6 & 287 \\ 
-=======
-13-01 & 106 & 20 & 12 & 139 & 5 & 6 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 125 & 23 & 9 & 87 & 2 & 7 & 253 \\ 
-  13-03 & 119 & 14 & 27 & 113 & 5 & 4 & 282 \\ 
-  13-04 & 132 & 20 & 16 & 109 & 12 & 10 & 299 \\ 
-  13-05 & 108 & 14 & 24 & 119 & 2 & 6 & 273 \\ 
-  13-06 & 110 & 24 & 18 & 108 & 3 & 16 & 279 \\ 
-<<<<<<< HEAD
-  13-07 & 87 & 12 & 21 & 99 & 2 & 8 & 229 \\ 
-  13-08 & 112 & 11 & 25 & 98 & 10 & 12 & 268 \\ 
-  13-09 & 118 & 16 & 16 & 107 & 15 & 13 & 285 \\ 
-  13-10 & 80 & 24 & 23 & 115 & 18 & 12 & 272 \\ 
-  13-11 & 100 & 4 & 20 & 110 & 11 & 11 & 256 \\ 
-  13-12 & 78 & 10 & 17 & 104 & 19 & 7 & 235 \\ 
-  14-01 & 97 & 12 & 15 & 107 & 17 & 6 & 254 \\ 
-  14-02 & 105 & 19 & 17 & 87 & 21 & 12 & 261 \\ 
-  14-03 & 127 & 12 & 22 & 94 & 20 & 21 & 296 \\ 
-  14-04 & 104 & 14 & 18 & 100 & 28 & 16 & 280 \\ 
-  14-05 & 111 & 9 & 25 & 87 & 12 & 11 & 255 \\ 
-  14-06 & 116 & 15 & 22 & 63 & 17 & 29 & 262 \\ 
-  14-07 & 106 & 17 & 14 & 70 & 12 & 21 & 240 \\ 
-  14-08 & 26 & 1 & 7 & 12 & 2 & 11 & 59 \\ 
-  Sum & 2067 & 290 & 368 & 1928 & 233 & 239 & 5125 \\ 
-=======
-  13-07 & 91 & 12 & 21 & 96 & 2 & 7 & 229 \\ 
-  13-08 & 112 & 11 & 25 & 98 & 10 & 12 & 268 \\ 
-  13-09 & 118 & 16 & 16 & 105 & 15 & 14 & 284 \\ 
-  13-10 & 80 & 24 & 23 & 115 & 18 & 12 & 272 \\ 
-  13-11 & 101 & 4 & 20 & 109 & 11 & 11 & 256 \\ 
-  13-12 & 78 & 8 & 8 & 74 & 13 & 40 & 221 \\ 
-  14-01 & 99 & 7 & 8 & 75 & 7 & 56 & 252 \\ 
-  14-02 & 120 & 14 & 11 & 63 & 16 & 35 & 259 \\ 
-  14-03 & 106 & 8 & 16 & 48 & 10 & 37 & 225 \\ 
-  Sum & 1605 & 219 & 254 & 1458 & 131 & 273 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter vakttid og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-   %%% INDIKATION
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter indikasjon og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_indikation_month.pdf}
-\end{figure}\end{frame}
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrr}
-  \toprule
- & \begin{sideways} SAP \end{sideways} & \begin{sideways} UAP \end{sideways} & \begin{sideways} NSTEMI \end{sideways} & \begin{sideways} STEMI \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 88 & 63 & 87 & 27 & 21 & 1 & 287 \\ 
-=======
-13-01 & 88 & 63 & 88 & 27 & 21 & 1 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 91 & 37 & 54 & 22 & 45 & 4 & 253 \\ 
-  13-03 & 89 & 54 & 66 & 33 & 39 & 1 & 282 \\ 
-  13-04 & 96 & 62 & 73 & 20 & 46 & 2 & 299 \\ 
-  13-05 & 79 & 63 & 63 & 25 & 43 & 0 & 273 \\ 
-  13-06 & 84 & 69 & 56 & 38 & 29 & 3 & 279 \\ 
-  13-07 & 66 & 44 & 65 & 28 & 26 & 0 & 229 \\ 
-  13-08 & 86 & 47 & 60 & 34 & 41 & 0 & 268 \\ 
-<<<<<<< HEAD
-  13-09 & 79 & 58 & 58 & 32 & 58 & 0 & 285 \\ 
-  13-10 & 60 & 64 & 71 & 38 & 39 & 0 & 272 \\ 
-  13-11 & 65 & 61 & 55 & 24 & 50 & 1 & 256 \\ 
-  13-12 & 57 & 57 & 60 & 22 & 39 & 0 & 235 \\ 
-  14-01 & 70 & 56 & 50 & 23 & 55 & 0 & 254 \\ 
-  14-02 & 90 & 57 & 41 & 31 & 42 & 0 & 261 \\ 
-  14-03 & 98 & 59 & 53 & 29 & 57 & 0 & 296 \\ 
-  14-04 & 80 & 56 & 54 & 24 & 66 & 0 & 280 \\ 
-  14-05 & 86 & 42 & 54 & 29 & 44 & 0 & 255 \\ 
-  14-06 & 73 & 35 & 24 & 28 & 32 & 70 & 262 \\ 
-  14-07 & 65 & 42 & 49 & 20 & 45 & 19 & 240 \\ 
-  14-08 & 22 & 13 & 7 & 3 & 10 & 4 & 59 \\ 
-  Sum & 1524 & 1039 & 1100 & 530 & 827 & 105 & 5125 \\ 
-=======
-  13-09 & 79 & 57 & 58 & 32 & 58 & 0 & 284 \\ 
-  13-10 & 60 & 64 & 71 & 38 & 39 & 0 & 272 \\ 
-  13-11 & 66 & 61 & 55 & 24 & 49 & 1 & 256 \\ 
-  13-12 & 52 & 53 & 48 & 14 & 35 & 19 & 221 \\ 
-  14-01 & 60 & 48 & 42 & 15 & 49 & 38 & 252 \\ 
-  14-02 & 77 & 52 & 31 & 23 & 35 & 41 & 259 \\ 
-  14-03 & 74 & 39 & 40 & 19 & 34 & 19 & 225 \\ 
-  Sum & 1147 & 813 & 870 & 392 & 589 & 129 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter indikasjon og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-   %%% FYND
-
-
-\begin{frame}
-\begin{figure}
-  \centering
-  \caption{Antall prosedyrer etter funn og måned}
-\includegraphics[width=0.95\textwidth]{N_procedures_fynd_month.pdf}
-\end{figure}\end{frame}
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrrrrr}
-  \toprule
- & \begin{sideways} 1-kar ikke HS \end{sideways} & \begin{sideways} 2-kar ikke HS \end{sideways} & \begin{sideways} 3-kar ikke HS \end{sideways} & \begin{sideways} HS \end{sideways} & \begin{sideways} HS + 1-kar \end{sideways} & \begin{sideways} HS + 2-kar \end{sideways} & \begin{sideways} HS + 3-kar \end{sideways} & \begin{sideways} Ikke konklusiv \end{sideways} & \begin{sideways} Normalt/Ateromatose \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-13-01 & 85 & 53 & 41 & 3 & 4 & 11 & 16 & 0 & 72 & 2 & 287 \\ 
-=======
-13-01 & 85 & 53 & 41 & 3 & 5 & 11 & 16 & 0 & 72 & 2 & 288 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-  13-02 & 68 & 40 & 48 & 0 & 6 & 7 & 15 & 0 & 65 & 4 & 253 \\ 
-  13-03 & 61 & 64 & 69 & 2 & 2 & 4 & 16 & 0 & 63 & 1 & 282 \\ 
-  13-04 & 85 & 54 & 61 & 0 & 3 & 6 & 13 & 1 & 74 & 2 & 299 \\ 
-  13-05 & 77 & 42 & 58 & 1 & 1 & 10 & 16 & 0 & 67 & 1 & 273 \\ 
-  13-06 & 77 & 40 & 52 & 0 & 6 & 10 & 14 & 0 & 77 & 3 & 279 \\ 
-  13-07 & 57 & 46 & 51 & 0 & 3 & 3 & 9 & 0 & 60 & 0 & 229 \\ 
-  13-08 & 65 & 52 & 53 & 0 & 0 & 7 & 19 & 0 & 72 & 0 & 268 \\ 
-<<<<<<< HEAD
-  13-09 & 68 & 67 & 47 & 1 & 1 & 6 & 18 & 0 & 77 & 0 & 285 \\ 
-  13-10 & 75 & 34 & 61 & 3 & 3 & 5 & 10 & 0 & 81 & 0 & 272 \\ 
-  13-11 & 76 & 33 & 38 & 2 & 4 & 5 & 16 & 0 & 81 & 1 & 256 \\ 
-  13-12 & 62 & 35 & 47 & 1 & 3 & 4 & 5 & 0 & 78 & 0 & 235 \\ 
-  14-01 & 72 & 48 & 35 & 0 & 2 & 3 & 13 & 0 & 81 & 0 & 254 \\ 
-  14-02 & 66 & 50 & 58 & 3 & 1 & 6 & 12 & 2 & 63 & 0 & 261 \\ 
-  14-03 & 79 & 58 & 49 & 1 & 4 & 6 & 11 & 1 & 87 & 0 & 296 \\ 
-  14-04 & 78 & 48 & 49 & 1 & 2 & 12 & 11 & 1 & 78 & 0 & 280 \\ 
-  14-05 & 59 & 47 & 51 & 2 & 2 & 4 & 17 & 1 & 72 & 0 & 255 \\ 
-  14-06 & 51 & 20 & 30 & 1 & 0 & 6 & 11 & 1 & 60 & 82 & 262 \\ 
-  14-07 & 44 & 45 & 37 & 1 & 3 & 4 & 9 & 0 & 75 & 22 & 240 \\ 
-  14-08 & 11 & 10 & 7 & 0 & 2 & 1 & 3 & 0 & 19 & 6 & 59 \\ 
-  Sum & 1316 & 886 & 942 & 22 & 52 & 120 & 254 & 7 & 1402 & 124 & 5125 \\ 
-=======
-  13-09 & 68 & 67 & 47 & 1 & 1 & 6 & 18 & 0 & 76 & 0 & 284 \\ 
-  13-10 & 75 & 34 & 61 & 3 & 3 & 5 & 10 & 0 & 81 & 0 & 272 \\ 
-  13-11 & 76 & 33 & 38 & 2 & 4 & 5 & 16 & 0 & 81 & 1 & 256 \\ 
-  13-12 & 52 & 29 & 35 & 1 & 3 & 3 & 5 & 0 & 71 & 22 & 221 \\ 
-  14-01 & 58 & 41 & 31 & 0 & 1 & 3 & 9 & 0 & 76 & 33 & 252 \\ 
-  14-02 & 54 & 44 & 54 & 2 & 1 & 6 & 11 & 1 & 52 & 34 & 259 \\ 
-  14-03 & 53 & 45 & 34 & 1 & 2 & 2 & 6 & 0 & 66 & 16 & 225 \\ 
-  Sum & 1011 & 684 & 733 & 16 & 41 & 88 & 193 & 2 & 1053 & 119 & 3940 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall prosedyrer etter funn og måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-   %%%  R.DIATRYCK, R.DIADOP, R.DIAIVUS
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rlrr}
-  \toprule
- & Month & FFR & IVUS \\ 
-  \midrule
-1 & 13-01 & 15 & 20 \\ 
-  2 & 13-02 & 19 & 2 \\ 
-  3 & 13-03 & 15 & 9 \\ 
-  4 & 13-04 & 15 & 5 \\ 
-  5 & 13-05 & 11 & 3 \\ 
-  6 & 13-06 & 31 & 4 \\ 
-  7 & 13-07 & 16 & 6 \\ 
-  8 & 13-08 & 21 & 5 \\ 
-  9 & 13-09 & 23 & 6 \\ 
-  10 & 13-10 & 18 & 6 \\ 
-  11 & 13-11 & 23 & 6 \\ 
-<<<<<<< HEAD
-  12 & 13-12 & 17 & 4 \\ 
-  13 & 14-01 & 21 & 3 \\ 
-  14 & 14-02 & 16 & 5 \\ 
-  15 & 14-03 & 18 & 6 \\ 
-  16 & 14-04 & 23 & 5 \\ 
-  17 & 14-05 & 20 & 3 \\ 
-  18 & 14-06 & 10 & 3 \\ 
-  19 & 14-07 & 15 & 2 \\ 
-  20 & 14-08 & 6 & 1 \\ 
-=======
-  12 & 13-12 & 13 & 3 \\ 
-  13 & 14-01 & 16 & 1 \\ 
-  14 & 14-02 & 12 & 2 \\ 
-  15 & 14-03 & 11 & 4 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall tilleggsundersøkelser etter måned} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-\subsection{NSTEMI}
-
-\begin{frame}
-\begin{Huge}
-NSTEMI
-\end{Huge}
-\end{frame}
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-Direkte & 11 & 125 & 81 & 11 & 258 & 0 & 19 & 505 \\ 
-  Førde sentralsjukehus & 0 & 10 & 6 & 3 & 18 & 0 & 2 & 39 \\ 
-  Haraldsplass sykehus & 1 & 11 & 10 & 1 & 35 & 0 & 0 & 58 \\ 
-  Haugesund sykehus & 0 & 2 & 1 & 0 & 11 & 0 & 13 & 27 \\ 
-  Haukeland Universitetssykehus & 2 & 23 & 17 & 1 & 50 & 0 & 1 & 94 \\ 
-  Lærdal sjukehus & 3 & 57 & 42 & 5 & 115 & 0 & 10 & 232 \\ 
-  Nordfjordeid sjukehus & 0 & 15 & 8 & 1 & 42 & 0 & 2 & 68 \\ 
-  Odda sykehus & 1 & 10 & 4 & 1 & 8 & 0 & 0 & 24 \\ 
-  Stord sykehus & 0 & 6 & 0 & 0 & 10 & 0 & 0 & 16 \\ 
-  Sykehuset Østfold & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 2 \\ 
-  Volda sykehus & 1 & 9 & 7 & 0 & 16 & 0 & 2 & 35 \\ 
-  Sum & 19 & 269 & 177 & 23 & 563 & 0 & 49 & 1100 \\ 
-=======
-Direkte & 11 & 117 & 71 & 8 & 236 & 0 & 13 & 456 \\ 
-  Førde sentralsjukehus & 0 & 8 & 5 & 2 & 10 & 0 & 2 & 27 \\ 
-  Haraldsplass sykehus & 1 & 6 & 8 & 1 & 25 & 0 & 0 & 41 \\ 
-  Haugesund sykehus & 0 & 1 & 1 & 0 & 10 & 0 & 9 & 21 \\ 
-  Haukeland Universitetssykehus & 1 & 14 & 13 & 0 & 32 & 0 & 1 & 61 \\ 
-  Lærdal sjukehus & 3 & 40 & 26 & 5 & 74 & 0 & 7 & 155 \\ 
-  Nordfjordeid sjukehus & 0 & 10 & 5 & 0 & 32 & 0 & 1 & 48 \\ 
-  Odda sykehus & 1 & 10 & 3 & 1 & 7 & 0 & 0 & 22 \\ 
-  Stord sykehus & 0 & 5 & 0 & 0 & 5 & 0 & 0 & 10 \\ 
-  Sykehuset Østfold & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 2 \\ 
-  Volda sykehus & 1 & 9 & 5 & 0 & 10 & 0 & 2 & 27 \\ 
-  Sum & 18 & 221 & 138 & 17 & 441 & 0 & 35 & 870 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall NSTEMI prosedyrer etter henvisende sykehus og primær beslutning} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-Direkte & 2.2 & 24.8 & 16.0 & 2.2 & 51.1 & 0.0 & 3.8 \\ 
-  Førde sentralsjukehus & 0.0 & 25.6 & 15.4 & 7.7 & 46.2 & 0.0 & 5.1 \\ 
-  Haraldsplass sykehus & 1.7 & 19.0 & 17.2 & 1.7 & 60.3 & 0.0 & 0.0 \\ 
-  Haugesund sykehus & 0.0 & 7.4 & 3.7 & 0.0 & 40.7 & 0.0 & 48.1 \\ 
-  Haukeland Universitetssykehus & 2.1 & 24.5 & 18.1 & 1.1 & 53.2 & 0.0 & 1.1 \\ 
-  Lærdal sjukehus & 1.3 & 24.6 & 18.1 & 2.2 & 49.6 & 0.0 & 4.3 \\ 
-  Nordfjordeid sjukehus & 0.0 & 22.1 & 11.8 & 1.5 & 61.8 & 0.0 & 2.9 \\ 
-  Odda sykehus & 4.2 & 41.7 & 16.7 & 4.2 & 33.3 & 0.0 & 0.0 \\ 
-  Stord sykehus & 0.0 & 37.5 & 0.0 & 0.0 & 62.5 & 0.0 & 0.0 \\ 
-  Sykehuset Østfold & 0.0 & 50.0 & 50.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  Volda sykehus & 2.9 & 25.7 & 20.0 & 0.0 & 45.7 & 0.0 & 5.7 \\ 
-=======
-Direkte & 2.4 & 25.7 & 15.6 & 1.8 & 51.8 & 0.0 & 2.9 \\ 
-  Førde sentralsjukehus & 0.0 & 29.6 & 18.5 & 7.4 & 37.0 & 0.0 & 7.4 \\ 
-  Haraldsplass sykehus & 2.4 & 14.6 & 19.5 & 2.4 & 61.0 & 0.0 & 0.0 \\ 
-  Haugesund sykehus & 0.0 & 4.8 & 4.8 & 0.0 & 47.6 & 0.0 & 42.9 \\ 
-  Haukeland Universitetssykehus & 1.6 & 23.0 & 21.3 & 0.0 & 52.5 & 0.0 & 1.6 \\ 
-  Lærdal sjukehus & 1.9 & 25.8 & 16.8 & 3.2 & 47.7 & 0.0 & 4.5 \\ 
-  Nordfjordeid sjukehus & 0.0 & 20.8 & 10.4 & 0.0 & 66.7 & 0.0 & 2.1 \\ 
-  Odda sykehus & 4.5 & 45.5 & 13.6 & 4.5 & 31.8 & 0.0 & 0.0 \\ 
-  Stord sykehus & 0.0 & 50.0 & 0.0 & 0.0 & 50.0 & 0.0 & 0.0 \\ 
-  Sykehuset Østfold & 0.0 & 50.0 & 50.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  Volda sykehus & 3.7 & 33.3 & 18.5 & 0.0 & 37.0 & 0.0 & 7.4 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Prosent andel NSTEMI prosedyrer etter henvisende sykehus og primær beslutning} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-Henvist & 8 & 144 & 96 & 12 & 305 & 0 & 30 & 595 \\ 
-  Direkte & 11 & 125 & 81 & 11 & 258 & 0 & 19 & 505 \\ 
-  Sum & 19 & 269 & 177 & 23 & 563 & 0 & 49 & 1100 \\ 
-=======
-Henvist & 7 & 104 & 67 & 9 & 205 & 0 & 22 & 414 \\ 
-  Direkte & 11 & 117 & 71 & 8 & 236 & 0 & 13 & 456 \\ 
-  Sum & 18 & 221 & 138 & 17 & 441 & 0 & 35 & 870 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Antall NSTEMI prosedyrer etter henvisnings status og primær beslutning} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-\begin{frame}
-\begin{tiny}
-<<<<<<< HEAD
-% latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Feb  4 10:43:17 2015
-=======
-% latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Tue Oct 21 20:20:22 2014
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrrrrrrr}
-  \toprule
- & \begin{sideways} Ingen behandling \end{sideways} & \begin{sideways} Fortsatt medisinsk behandling \end{sideways} & \begin{sideways} Diskusjon/uavklart \end{sideways} & \begin{sideways} PCI elektiv \end{sideways} & \begin{sideways} PCI ad hoc \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} NA \end{sideways} \\ 
-  \midrule
-<<<<<<< HEAD
-Henvist & 1.3 & 24.2 & 16.1 & 2.0 & 51.3 & 0.0 & 5.0 \\ 
-  Direkte & 2.2 & 24.8 & 16.0 & 2.2 & 51.1 & 0.0 & 3.8 \\ 
-=======
-Henvist & 1.7 & 25.1 & 16.2 & 2.2 & 49.5 & 0.0 & 5.3 \\ 
-  Direkte & 2.4 & 25.7 & 15.6 & 1.8 & 51.8 & 0.0 & 2.9 \\ 
->>>>>>> 726e155217ccdf3dd8f3d06d72b273e7c1888e4b
-   \bottomrule
-\end{tabular}
-\caption{Prosent andel NSTEMI prosedyrer etter henvisnings status og primær beslutning} 
-\end{table}\end{tiny}
-\end{frame}
-
-
-
-\end{document}
-
-
-   %%%          legend.title          title of legend (‘element_text’;inherits from ‘title’)    
-   %%%                                                                                          
-   %%%          legend.title.align    alignment of legend title (number from 0 (left) to 1 
-   %%%                                (right)) 
-   %%%          legend.position       the position of 
-   %%%                                legends.  ("left", "right", "bottom", "top", or 
-   %%%                                two-element numeric vector) 
