--- a/NORIC_local_monthly_stent.Rnw
+++ b/NORIC_local_monthly_stent.Rnw
@@ -3,16 +3,20 @@
 \usetheme{Hannover}
 \usecolortheme{seagull}
 
+%\usepackage[absolute,overlay]{textpos}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english, norsk]{babel}
-\usepackage[absolute,overlay]{textpos}
 \usepackage{xspace}
 \usepackage{booktabs}
 \usepackage{rotating}
 \usepackage{Sweave}
 
-
+<<echo = FALSE , eval = FALSE>>=
+ ## for testing on localhost
+reshID <- 102966 ## HUS reshID set manually for local testing
+Sweave("NORIC_local_monthly_stent.Rnw")
+@ 
 
 <<echo = FALSE , results = tex>>=
 
@@ -22,7 +26,6 @@ require(RColorBrewer)    # intellingent colour palettes
 require(RMySQL)          # accessing the database
 
 conf <- yaml::yaml.load_file('../dbConfig.yml')
-## reshID <- 2 ## for local testing
 
 printname <- unlist( conf [[paste("noricStaging" , reshID , sep = "")]]["disp"])
 
@@ -46,31 +49,36 @@ con <- dbConnect( dbDriver("MySQL") ,
   password = unlist( conf[[paste("noricStaging" , reshID , sep = "")]]["pass"]) )
 
 # ensure utf8 encoding
-t <- dbGetQuery( con, "SET NAMES utf8;" )
+dbGetQuery( con, "SET NAMES utf8;" ) -> DoNotPrint
 
-dat.stent <- dbGetQuery( con , "select * from SegmentStent")
+SegmentStent <- dbGetQuery(
+    conn = con , 
+    statement = "select * from SegmentStent")
 
-mce.query <- "
+AngioPCI <- dbGetQuery(
+    conn = con , 
+    statement = "
 SELECT
    A.ForlopsID ,
    A.ProsedyreType ,
-   SUM(S.ForlopsID>0) AS Nstents ,
-   A.ProsedyreDato
+   A.ProsedyreDato ,
+   SUM(S.ForlopsID>0) AS Nstents
 FROM
    AngioPCI A
    LEFT JOIN SegmentStent S on A.ForlopsID=S.ForlopsID
+WHERE A.ProsedyreType  != 'Angio'
 GROUP BY ForlopsID;"
-
-dat.mce <- dbGetQuery( con , mce.query)
-dat.mce$Nstents[ is.na(dat.mce$Nstents) ] <- 0
+)
 
 con <- dbDisconnect(con)
 con <- dbUnloadDriver(dbDriver("MySQL"))
 
+AngioPCI$Nstents[ is.na(AngioPCI$Nstents) ] <- 0
 
-dat.stent$StentType <- factor(dat.stent$StentType)
 
-dat.stent$Indikasjon <- recode( dat.stent$Indikasjon ,"
+SegmentStent$StentType <- factor(SegmentStent$StentType)
+
+SegmentStent$Indikasjon <- recode( SegmentStent$Indikasjon ,"
    'Stabil koronarsykdom '                    ='SAP';
    'UAP'                                      ='UAP';
    'NSTEMI'                                   ='NSTEMI';
@@ -81,7 +89,7 @@ dat.stent$Indikasjon <- recode( dat.stent$Indikasjon ,"
    else                                       ='Annet'
 ")
  
-dat.stent$Indikasjon <- factor( dat.stent$Indikasjon , levels = c(
+SegmentStent$Indikasjon <- factor( SegmentStent$Indikasjon , levels = c(
 'SAP',
 'UAP',
 'NSTEMI',
@@ -90,80 +98,79 @@ dat.stent$Indikasjon <- factor( dat.stent$Indikasjon , levels = c(
 
 
    # simplify Xience stent names
-dat.stent$Stentnavn2 <- factor(gsub(
+SegmentStent$Stentnavn2 <- factor(gsub(
     pattern = ".+Xience.+" ,
     replacement = "Xience" ,
-    x = dat.stent$Stentnavn))
+    x = SegmentStent$Stentnavn))
 
-
-dat.stent$ProsedyreDato <- as.Date(
-    x = dat.stent$ProsedyreDato ,
-    format = "%Y-%m-%d")
+SegmentStent$ProsedyreDato <- as.Date(
+    x = SegmentStent$ProsedyreDAto ,
+    format = "%b %d, %Y")
 
    ### restrict dataset to current and last year
-ind.stent <- which( as.numeric( format( dat.stent$ProsedyreDato , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1)
-dat.stent <- dat.stent[ind.stent,]
+ind.stent <- which( as.numeric( format( SegmentStent$ProsedyreDato , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1)
+SegmentStent <- SegmentStent[ind.stent,]
 
-dat.stent$Month <- as.numeric(
+SegmentStent$Month <- as.numeric(
     format( 
-        x = dat.stent$ProsedyreDato , 
+        x = SegmentStent$ProsedyreDato , 
         format = "%m" ))
 
-dat.stent$Quarter <- as.numeric(
+SegmentStent$Quarter <- as.numeric(
     cut(
-        x = dat.stent$Month ,
+        x = SegmentStent$Month ,
         breaks = 0:4*3))
 
-dat.stent$Year <- as.numeric(
+SegmentStent$Year <- as.numeric(
     format( 
-        x = dat.stent$ProsedyreDato ,
+        x = SegmentStent$ProsedyreDato ,
         format = "%y" ))
 
-dat.stent$YearMonth <- factor(
+SegmentStent$YearMonth <- factor(
     format(
-        x = dat.stent$ProsedyreDato ,
+        x = SegmentStent$ProsedyreDato ,
         format = "%y-%m"))
 
-dat.stent$YearQuarter <- factor(
+SegmentStent$YearQuarter <- factor(
     paste(
-        dat.stent$Year ,
-        dat.stent$Quarter ,
+        SegmentStent$Year ,
+        SegmentStent$Quarter ,
         sep = "/"))
 
 
 
-dat.mce$ProsedyreDato <- as.Date(
-    x = dat.mce$ProsedyreDato ,
+AngioPCI$ProsedyreDato <- as.Date(
+    x = AngioPCI$ProsedyreDato ,
     format = "%Y-%m-%d")
 
    ### restrict dataset to current and last year
-ind.mce <- which( as.numeric( format( dat.mce$ProsedyreDato , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1)
-dat.mce <- dat.mce[ind.mce,]
+ind.mce <- which( as.numeric( format( AngioPCI$ProsedyreDato , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1)
+AngioPCI <- AngioPCI[ind.mce,]
                        
-dat.mce$Month <- as.numeric(
+AngioPCI$Month <- as.numeric(
     format( 
-        x = dat.mce$ProsedyreDato , 
+        x = AngioPCI$ProsedyreDato , 
         format = "%m" ))
 
-dat.mce$Quarter <- as.numeric(
+AngioPCI$Quarter <- as.numeric(
     cut(
-        x = dat.mce$Month ,
+        x = AngioPCI$Month ,
         breaks = 0:4*3))
                          
-dat.mce$Year <- as.numeric(
+AngioPCI$Year <- as.numeric(
     format( 
-        x = dat.mce$ProsedyreDato ,
+        x = AngioPCI$ProsedyreDato ,
         format = "%y" ))
 
-dat.mce$YearMonth <- factor(
+AngioPCI$YearMonth <- factor(
     format(
-        x = dat.mce$ProsedyreDato ,
+        x = AngioPCI$ProsedyreDato ,
         format = "%y-%m"))
 
-dat.mce$YearQuarter <- factor(
+AngioPCI$YearQuarter <- factor(
     paste(
-        dat.mce$Year ,
-        dat.mce$Quarter ,
+        AngioPCI$Year ,
+        AngioPCI$Quarter ,
         sep = "/"))
 
 @ 
@@ -195,12 +202,12 @@ op <- par(
     mar = c(5.1,4.1,4.1,13.1) ,
     bg = "#EEEEEE")
 
-pal <- brew( length(levels(dat.stent$StentType)))
+pal <- brew( length(levels(SegmentStent$StentType)))
 
 barplot(
     xtabs(
         formula = ~ StentType + YearMonth ,
-        data = dat.stent ) , 
+        data = SegmentStent ) , 
     las = 1 ,
     xlab = "Måned" ,
     ylab = "Antall" ,
@@ -214,7 +221,7 @@ legend(
     bty = "n" ,
     horiz = FALSE ,
     fill = pal,
-    legend = levels(dat.stent$StentType) ,
+    legend = levels(SegmentStent$StentType) ,
     cex = 1)
 
 par(op)
@@ -236,7 +243,7 @@ print(
         addmargins(
             xtabs(
                 formula = ~ YearMonth + StentType ,
-                data = dat.stent )) ,
+                data = SegmentStent )) ,
         digits = 0 , caption = "Antall stenter etter type og måned") ,
     booktabs = TRUE ,
     rotate.colnames = FALSE)
@@ -255,7 +262,7 @@ print(
             addmargins(
                 xtabs(
                     formula = ~ YearMonth + StentType ,
-                    data = dat.stent ) ,
+                    data = SegmentStent ) ,
                 margin = 1 ) ,
             margin = 1) ,
         digits = 1 , caption = "Prosent stenttyper etter måned") ,
@@ -264,28 +271,6 @@ print(
 @
 \end{tiny}
 \end{frame}
-
-
-
-\begin{frame}
-\begin{tiny}
-<<echo = FALSE , results = tex>>=
-print(
-    xtable(
-    100*prop.table(
-        addmargins(
-            xtabs(
-                formula = ~ YearMonth + Indikasjon + StentType,
-                data = dat.stent ) ,
-            margin = 1) ,
-        margin = 1:2)[,,2] ,
-        digits = 1 , caption = "Prosent andel StentType per indikasjon og måned") ,
-    booktabs = TRUE ,
-    rotate.colnames = TRUE)
-@
-\end{tiny}
-\end{frame}
-
 
 
 
@@ -305,7 +290,7 @@ op <- par(
     mar = c(5 , 6 , 1 , 1 )+0.1)
 
 hist( 
-    x = dat.mce$Nstents ,
+    x = AngioPCI$Nstents ,
     include.lowest = TRUE ,
     col = "#B3B3B3AA" ,
     right = FALSE ,
@@ -313,7 +298,7 @@ hist(
     ylab = "Antall prosedyrer" ,
     xlab = "Antall stenter per prosedyre")
 
-S <- summary(dat.mce$Nstents)
+S <- summary(AngioPCI$Nstents)
 legend(
     "topright" ,
     bty = "n" ,
@@ -339,14 +324,13 @@ print(
         addmargins(
             xtabs(
                 formula = ~ Stentnavn2 +YearQuarter ,
-                data = dat.stent )) ,
+                data = SegmentStent )) ,
         digits = 0 , caption = "Antall stenter etter merke per kvartal") ,
     booktabs = TRUE ,
     rotate.colnames = TRUE)
 @
 \end{tiny}
 \end{frame}
-
 
 
 
@@ -359,7 +343,7 @@ print(
             addmargins(
                 xtabs(
                     formula = ~ Stentnavn2 + YearQuarter ,
-                    data = dat.stent ) ,
+                    data = SegmentStent ) ,
                 margin = 2 ) ,
             margin = 2) ,
         digits = 1 , caption = "Prosent stentermerke per kvartal") ,
@@ -371,3 +355,23 @@ print(
 
 
 \end{document}
+
+
+\begin{frame}
+\begin{tiny}
+<<echo = FALSE , results = tex>>=
+print(
+    xtable(
+    100*prop.table(
+        addmargins(
+            xtabs(
+                formula = ~ YearMonth + Indikasjon + StentType,
+                data = SegmentStent ) ,
+            margin = 1) ,
+        margin = 1:2)[,,2] ,
+        digits = 1 , caption = "Prosent andel stent type per indikasjon og måned") ,
+    booktabs = TRUE ,
+    rotate.colnames = TRUE)
+@
+\end{tiny}
+\end{frame}
